--- a/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
+++ b/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
@@ -1,141 +1,139 @@
 ﻿<UserControl x:Class="MultiAlign.Windows.Viewers.AnalysisView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:windows="clr-namespace:MultiAlign.Windows"   
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"              
              xmlns:datasetViews="clr-namespace:MultiAlign.Windows.Viewers.Datasets"
              xmlns:clusterViews="clr-namespace:MultiAlign.Windows.Viewers.Clusters"
-             xmlns:databaseViews="clr-namespace:MultiAlign.Windows.Viewers.Databases"                          
-             xmlns:massTagViews="clr-namespace:MultiAlign.Windows.Viewers.MassTags"
              xmlns:spectraViews="clr-namespace:MultiAlign.Windows.Viewers.Spectra"
              xmlns:viewerViews="clr-namespace:MultiAlign.Windows.Viewers"
              xmlns:converters="clr-namespace:MultiAlign.Converters"          
-             xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"                  
              mc:Ignorable="d" 
-             d:DesignHeight="616" d:DesignWidth="872">
-    <UserControl.Resources>
-        <converters:BoolListSizeConverter x:Key="ListSizeConverter"/>
-        <converters:IntVisibilityConverter x:Key="IntVisibilityConverter"/>
-        <converters:BoolVisibilityConverter x:Key="BoolVisibilityConverter"/>
-    </UserControl.Resources>
+             d:DesignHeight="616" d:DesignWidth="1100">    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="32"></RowDefinition>
         </Grid.RowDefinitions>
-        <TabControl 
-            Grid.RowSpan="2" >
-            <TabItem                
-                IsSelected="True"
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Cluster Data">
-                <Grid>        
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="300"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="70*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="32"/>
-                    </Grid.RowDefinitions> 
-                    <TabControl>
-                        <TabItem Header="Clusters"
-                                 Style="{DynamicResource ResourceKey=SimpleTabItem}">
-                            <clusterViews:ClusterTree                         
-                                DataContext="{Binding Path=ClusterTree}"   
-                                Grid.Row="0"                                            
-                                Grid.Column="0"/>
-                        </TabItem>                        
-                    </TabControl>
-                    <GridSplitter
-                        Grid.Row="0"                        
-                        Grid.Column="1"
-                        Width="3"                        
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" 
-                        Background="#FF00000A" />
-                    <TabControl
+        <Grid>        
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="70*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="32"/>
+            </Grid.RowDefinitions> 
+            <TabControl>
+                <TabItem Header="Clusters"
+                            Style="{DynamicResource ResourceKey=SimpleTabItem}">
+                    <clusterViews:ClusterTree                         
+                        DataContext="{Binding Path=ClusterTree}"   
                         Grid.Row="0"                                            
-                        Grid.Column="2">
-                        <TabItem 
-                            
+                        Grid.Column="0"/>
+                </TabItem>                        
+            </TabControl>
+            <GridSplitter
+                Grid.Row="0"                        
+                Grid.Column="1"
+                Width="3"                        
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch" 
+                Background="#FF00000A" />
+            <TabControl
+                Grid.Row="0"                                            
+                Grid.Column="2">
+                <TabItem                             
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                    Header="All Clusters">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <ContentControl                                     
+                            Grid.Row="0"
+                            Margin="5" Content="{Binding ClusterChart}"/>
+                        <Button 
+                            Grid.Row="1"
+                            Margin="5"
+                            Command="{Binding ApplyViewAsFilter}"
+                            Style="{DynamicResource SimpleButtonStyle}"
+                            Width="156"
+                            HorizontalAlignment="Right"
+                            >
+                            Use Mass / NET As Filter
+                        </Button>
+                    </Grid>
+                </TabItem>
+                <TabItem                             
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                    Header="{Binding SelectedClusterName}">
+                    <TabControl>
+                        <TabItem
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                            Header="All Clusters">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*"></RowDefinition>
-                                    <RowDefinition Height="Auto"></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <ContentControl                                     
-                                    Grid.Row="0"
-                                    Margin="5" Content="{Binding ClusterChart}"/>
-                                <Button 
-                                    Grid.Row="1"
-                                    Margin="5"
-                                    Command="{Binding ApplyViewAsFilter}"
-                                    Style="{DynamicResource SimpleButtonStyle}"
-                                    Width="156"
-                                    HorizontalAlignment="Right"
-                                    >
-                                    Use Mass / NET As Filter
-                                </Button>
-                            </Grid>
+                            Header="Overview"
+                            >
+                            <clusterViews:ClusterOverview
+                                Margin="5"
+                                DataContext="{Binding ClusterViewModel}"/>                                    
                         </TabItem>
-                        <TabItem                             
+                        <TabItem
+                            Header="Extracted Ion Chromatogram"
+                            Width="Auto"
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                            Header="Cluster Details">
+                            >                                    
                             <clusterViews:ClusterControl
                                 Margin="5"
                                 DataContext="{Binding ClusterViewModel}"/>
                         </TabItem>
-
                         <TabItem                             
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                            Header="Cluster Spectra">
-                            <spectraViews:SpectraView                                                              
-                                DataContext="{Binding Path=ClusterSpectraViewModel}"/>
+                            Header="MS/MS Spectra">
+                                    <spectraViews:SpectraView                                                              
+                                            DataContext="{Binding Path=ClusterSpectraViewModel}"/>
                         </TabItem>
                         <TabItem                             
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                            Header="Clusters Identifications">
-                            <viewerViews:IdentificationView                                                             
+                            Header="Identifications">
+                                    <viewerViews:IdentificationView                                                             
                                 DataContext="{Binding Path=ClusterIdentificationViewModel}"/>
-                                
-                        </TabItem>
 
-                    </TabControl>                        
-                </Grid>
-            </TabItem>
-            <TabItem
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Identifications"
-                Visibility="Collapsed">
-            </TabItem>
-            <TabItem
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Datasets"                
-                >
-                <datasetViews:DatasetView DataContext="{Binding Path=Datasets}"/>
-            </TabItem>
-            <TabItem
-                
-                Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                Header="Advanced"                
-                >
-                <StackPanel>
-                    
-                    <GroupBox  Header="Visualization">
-                        <CheckBox
-                            IsChecked ="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True, Mode=TwoWay}"
-                            Margin="5"
-                            >
-                            Show Ion Mobility Dimensions
-                        </CheckBox>
-                    </GroupBox>
-                </StackPanel>
-            </TabItem>
-        </TabControl>
+                        </TabItem>
+                    </TabControl>
+                </TabItem>
+
+
+                <TabItem
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                    Header="Datasets">
+                    <datasetViews:DatasetView DataContext="{Binding Path=Datasets}"/>
+                </TabItem>
+                <TabItem
+                        Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                        Header="Global Statistics"
+                        >
+
+                </TabItem>
+
+                <TabItem                
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                    Header="Advanced"                
+                    >
+                    <StackPanel>
+
+                        <GroupBox  Header="Visualization">
+                            <CheckBox
+                        IsChecked ="{Binding Path=UsesDriftTime, NotifyOnSourceUpdated=True, Mode=TwoWay}"
+                        Margin="5"
+                        >
+                                Show Ion Mobility Dimensions
+                            </CheckBox>
+                        </GroupBox>
+                    </StackPanel>   
+                </TabItem>
+            </TabControl>                        
+        </Grid>
     </Grid>
 </UserControl>
