--- a/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
+++ b/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
@@ -2,26 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"             
-             xmlns:pnnlCharts="clr-namespace:PNNLControls.Drawing.Charting;assembly=PNNLControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:maCharts="clr-namespace:MultiAlignCustomControls.Charting;assembly=MultiAlignCustomControls"                                               
              xmlns:featureViews="clr-namespace:MultiAlign.Windows.Viewers.Features"          
-             xmlns:clusterViews="clr-namespace:MultiAlign.Windows.Viewers.Clusters"         
-             xmlns:spectraViews="clr-namespace:MultiAlign.Windows.Viewers.Spectra"          
-             xmlns:massTagViews="clr-namespace:MultiAlign.Windows.Viewers.MassTags"       
-             xmlns:converters="clr-namespace:MultiAlign.Converters"
+             xmlns:clusterViews="clr-namespace:MultiAlign.Windows.Viewers.Clusters"
              mc:Ignorable="d"          
-             x:Name="myControl" 
-             d:DesignWidth="968"
-             d:DesignHeight="582">
+             xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf"
+             d:DesignHeight="582" d:DesignWidth="800">
 
     <UserControl.Resources>
 
         <DataTemplate x:Key="UMCFeatureTemplate">
             <clusterViews:UMCSummaryView 
                 HorizontalAlignment="Stretch"
-                DataContext="{Binding}"/> 
+                DataContext="{Binding}"/>
         </DataTemplate>
         <DataTemplate x:Key="ChargeStateTemplate">
             <featureViews:ChargeStateControl DataContext="{Binding}"/>
@@ -29,164 +23,92 @@
     </UserControl.Resources>
 
     <DockPanel>
-     <Label 
-         DockPanel.Dock="Top"
-         HorizontalContentAlignment="Center"
-         VerticalContentAlignment="Center"
-         FontSize="14"
-         Content="{Binding Path=Name}"/>
-    <Grid 
+        <Grid 
         Margin="4">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="80*"/>
-        </Grid.ColumnDefinitions>        
-        <Grid
-            Grid.Column="0"
-            Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>             
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="80*"/>
             </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="40*"/>
-                </Grid.RowDefinitions>
-                <Label
-                    Foreground="Gray"
-                    FontSize="18"
-                    >
-                    Features
-                </Label>
-                <ScrollViewer
-                    Margin ="5"
-                    HorizontalScrollBarVisibility="Hidden"
-                    VerticalScrollBarVisibility="Auto"
-                    Grid.Row="1">                                    
-                    <ListBox
+            
+            <ScrollViewer
+                Margin ="5"
+                HorizontalScrollBarVisibility="Hidden"
+                VerticalScrollBarVisibility="Auto"
+                Grid.Row="1"
+                Grid.Column="0">
+                <ListBox
                         
-                            FontSize="14"               
-                            HorizontalContentAlignment="Stretch"
-                            SelectedItem="{Binding SelectedFeature,                                 
-                                            UpdateSourceTrigger=PropertyChanged,
-                                            Mode=TwoWay,
-                                            NotifyOnSourceUpdated=True}"
-                            ItemTemplate="{StaticResource UMCFeatureTemplate}"
-                            ItemsSource="{Binding Features}"                        
-                            Margin="5"
-                            Grid.Column="1"/>
-                </ScrollViewer>
-            </Grid>
-        <GridSplitter                        
+                        FontSize="14"               
+                        HorizontalContentAlignment="Stretch"
+                        SelectedItem="{Binding SelectedFeature,                                 
+                                        UpdateSourceTrigger=PropertyChanged,
+                                        Mode=TwoWay,
+                                        NotifyOnSourceUpdated=True}"
+                        ItemTemplate="{StaticResource UMCFeatureTemplate}"
+                        ItemsSource="{Binding Features}"                        
+                        Margin="5"/>
+            </ScrollViewer>
+            <GridSplitter                        
                         Grid.Column="1"
                         Width="3"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch"
                         Background="#FF00000A"/>
 
-            <TabControl
+            <Grid
                 Margin="5"
                 Grid.Row="0"
-                Grid.Column="2">
-                <TabItem 
-                            Header="Cluster Data"
-                            Style="{DynamicResource ResourceKey=SimpleTabItem}">
+                Grid.Column="2" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="64"/>
+                    <RowDefinition Height="50*"/>
+                </Grid.RowDefinitions>
+                <oxy:Plot Model="{Binding Path=XicModel.Model}"
+                            Grid.Row="0"
+                            Margin="5"
+                            >
 
-                    <TabControl
-                Grid.Row="1"
-                Grid.Column="0">
-                        <TabItem 
-                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                    FontSize="14"
-                    Width="128"
-                    Header="Cluster Mass vs. NET"
-                    >
-                            <ContentControl
+                </oxy:Plot>
+                <GridSplitter
+                        Grid.Row="1"            
+                        Height="3"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
                         Margin="1"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Content="{Binding ClusterChartHost}"
-                        >
-                            </ContentControl>
-                        </TabItem>
-                        <TabItem 
-                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                    FontSize="16"
-                    Width="196"
-                    Header="Cluster Mass vs. Drift Time"
-                    >
-
-                            <WindowsFormsHost
-                        Margin="1,1,1,1"
-                        Grid.Row="0"                        
-                        Grid.Column="2">
-                                <maCharts:SingleClusterChart
-                                x:Name="m_driftChart"                                
-                                Title=""                                
-                                IsDriftTimeXAxis="True"
-                                XAxisLabel="Drift Time (ms)"
-                                YAxisShortHand="ppm"
-                                XAxisShortHand="ms"
-                                LegendVisible="False"
-                                />
-                            </WindowsFormsHost>
-                        </TabItem>
-                    </TabControl>
-                </TabItem>
-                <TabItem
-                        Width="Auto"
-                        Header="Extracted Ion Chromatogram"
-                        Style="{DynamicResource ResourceKey=SimpleTabItem}">
-
-                    <Grid >
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="50*"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="64"/>
-                            <RowDefinition Height="50*"/>
-                        </Grid.RowDefinitions>
-                        <ContentControl 
-                                Grid.Row="0"
-                                Content="{Binding XicChart}"/>
-                        <GridSplitter
-                                Grid.Row="1"            
-                                Height="3"
-                                HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
-                                Margin="1"
-                                Background="#FFA0A0A0"/>             
-                        <StackPanel 
-                            Grid.Row="2"
-                            Orientation="Horizontal">
-                            <Label 
-                                FontSize="12"
-                                Margin="5"
-                                Foreground ="Gray"  
-                                HorizontalAlignment="Right"
-                                VerticalContentAlignment="Center">
-                                Select Charge</Label>
-                            <ComboBox
-                                FontSize="18"
-                                Width="200"
-                                HorizontalAlignment="Right"
-                                HorizontalContentAlignment="Left"
-                                ItemTemplate="{StaticResource ResourceKey=ChargeStateTemplate}"
-                                SelectedItem="{Binding SelectedCharge, 
-                                                UpdateSourceTrigger=PropertyChanged,
-                                                Mode=TwoWay,
-                                                NotifyOnSourceUpdated=True}"
-                                ItemsSource="{Binding Charges,                             
-                                                UpdateSourceTrigger=PropertyChanged,
-                                                NotifyOnSourceUpdated=True}"                        
-                                Margin="5"/>
-                        </StackPanel>
-                        <ContentControl                         
-                                Grid.Row="3" 
-                                Content="{Binding ParentSpectraChart}"
-                                />
-                    </Grid>
-                </TabItem>
-            </TabControl>
+                        Background="#FFA0A0A0"/>
+                <StackPanel 
+                    Grid.Row="2"
+                    Orientation="Horizontal">
+                    <Label 
+                        FontSize="12"
+                        Margin="5"
+                        Foreground ="Gray"  
+                        HorizontalAlignment="Right"
+                        VerticalContentAlignment="Center">
+                        Select Charge</Label>
+                    <ComboBox
+                        FontSize="18"
+                        Width="200"
+                        HorizontalAlignment="Right"
+                        HorizontalContentAlignment="Left"
+                        ItemTemplate="{StaticResource ResourceKey=ChargeStateTemplate}"
+                        SelectedItem="{Binding SelectedCharge, 
+                                        UpdateSourceTrigger=PropertyChanged,
+                                        Mode=TwoWay,
+                                        NotifyOnSourceUpdated=True}"
+                        ItemsSource="{Binding Charges,                             
+                                        UpdateSourceTrigger=PropertyChanged,
+                                        NotifyOnSourceUpdated=True}"                        
+                        Margin="5"/>
+                </StackPanel>
+                <oxy:Plot 
+                    Grid.Row="3"
+                    Margin="5"
+                    Model="{Binding ParentSpectrumViewModel.Model}"/>
+            </Grid>
         </Grid>
     </DockPanel>
 </UserControl>
