--- a/src/MultiAlign/Windows/Viewers/Databases/MassTagOptionsView.xaml
+++ b/src/MultiAlign/Windows/Viewers/Databases/MassTagOptionsView.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
-    <ScrollViewer>
         <StackPanel>        
             <Expander
                 Margin="25,5,5,5"
@@ -87,7 +86,7 @@
                             Margin="5"
                             Grid.Row="2"
                             Grid.Column="1"                                
-                            Text="{Binding  Path=MinimumDiscriminantScore, 
+                            Text="{Binding  Path=MinimumDiscriminant, 
                                             Mode=TwoWay, 
                                             NotifyOnSourceUpdated=True, 
                                             UpdateSourceTrigger=PropertyChanged}"/>
@@ -119,7 +118,7 @@
                 FontSize="14"
                 Foreground="Gray"
                 IsExpanded="True"
-                Header="Experiment Filters">
+                Header="Tag Filters">
                 <Border
                                     Margin="5"
                                     BorderBrush="LightGray"
@@ -137,15 +136,76 @@
                             <ColumnDefinition Width="164"/>
                         </Grid.ColumnDefinitions>
 
-                        <CheckBox
-                            IsChecked="{Binding UseConfirmedTagsOnly}">
-                            
-                        </CheckBox>                       
-                        
+                    <CheckBox
+                            Foreground="Gray"
+                            Grid.Row="1"
+                            Margin="5"
+                            IsChecked="{Binding OnlyLoadTagsWithDriftTime}">
+                            Only Load Tags with Drift Time
+                        </CheckBox>
+
+
+                    </Grid>
+                </Border>
+            </Expander>
+            <Expander
+                Margin="25,5,5,5"
+                FontSize="14"
+                Foreground="Gray"
+                IsExpanded="True"
+                Header="Experiment Filters">
+                <Border
+                                    Margin="5"
+                                    BorderBrush="LightGray"
+                                    BorderThickness="1">
+                    <Grid  Margin="20,5,5,5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            Foreground="Gray">Minimum Observation Count</TextBlock>
+                        <TextBox
+                            Foreground="Gray"
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="5"
+                            Text="{Binding MinimumObservationCountFilter, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBlock
+                            Grid.Row="1"
+                            Foreground="Gray">Experiment Exclusion Filter</TextBlock>
+                        <TextBox
+                            Foreground="Gray"
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="5"
+                            Text="{Binding ExperimentExclusionFilter, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+
+
+                        <TextBlock 
+                            Grid.Row="2"
+                            Grid.Column="0"
+                            Foreground="Gray">Experiment Filter</TextBlock>
+                        <TextBox
+                            Foreground="Gray"
+                            Grid.Row="2"
+                            Grid.Column="1"
+                            Margin="5"
+                            Text="{Binding ExperimentFilter, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+
 
                     </Grid>
                 </Border>
             </Expander>
         </StackPanel>
-    </ScrollViewer>
+    
 </UserControl>
