--- a/src/MultiAlign/Windows/Viewers/Spectra/MSSpectraSummary.xaml
+++ b/src/MultiAlign/Windows/Viewers/Spectra/MSSpectraSummary.xaml
@@ -2,49 +2,36 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:converters="clr-namespace:MultiAlign.Converters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:oxy="http://oxyplot.codeplex.com"
              mc:Ignorable="d" 
-             d:DesignHeight="256" d:DesignWidth="250">
-    
-    <UserControl.Resources>
-        <converters:IntToStringConverter x:Key="IntToStringConverter" />
-        <DataTemplate x:Key="MSSpectraDataTemplate">
-            <Border CornerRadius="2" BorderThickness="1" HorizontalAlignment="Stretch" Padding="3" Margin="3" BorderBrush="#FFCCCCCC">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="32"></ColumnDefinition>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                    </Grid.RowDefinitions>
-                   
-                    <Image
-                                Grid.Row="3"
-                                Grid.Column="0"
-                                Width="16"
-                                Height="16"
-                                Source="/MultiAlign;component/Resources/molecule.png"/>                    
-                    <TextBlock 
-                            Grid.Row="3"
-                            Grid.Column="1"
-                            FontSize="14"   
-                            Margin="5"
-                            HorizontalAlignment="Stretch">
-                            <TextBlock.Text>                                                            
-                                    <Binding Path="Sequence" />                    
-                            </TextBlock.Text>
-                    </TextBlock>
-                </Grid>
-            </Border>
-        </DataTemplate>
-    </UserControl.Resources>
+             Height="300" d:DesignWidth="500">
+    <Border
+            CornerRadius="2" 
+            BorderThickness="2"
+            HorizontalAlignment="Stretch" Margin="3" 
+            BorderBrush="Black">
     <Grid >
-        <Border CornerRadius="2" BorderThickness="1" HorizontalAlignment="Stretch" Margin="3" BorderBrush="#FFCCCCCC">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Border
+            Grid.Column="0"
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            CornerRadius="2" 
+            BorderThickness="1"
+            HorizontalAlignment="Stretch" Margin="3" BorderBrush="#FFCCCCCC">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="32"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="128"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="128"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
@@ -110,8 +97,8 @@
                 <Label
                             FontSize="16"
                             Margin="5"
-                            Grid.Row="3"
-                            Grid.Column="1"
+                            Grid.Row="2"
+                            Grid.Column="3"
                             Foreground="Gray"
                             >
                     Mono Mass
@@ -119,8 +106,8 @@
                 <TextBlock 
                             FontSize="16"
                             Margin="5"
-                            Grid.Row="3"
-                            Grid.Column="2"   
+                            Grid.Row="2"
+                            Grid.Column="4"   
                                  Text="{Binding Path=Spectrum.ParentFeature.MassMonoisotopic , StringFormat=F3}"                                                                     
                             HorizontalAlignment="Stretch"/>
 
@@ -128,7 +115,7 @@
                             FontSize="16"
                             Margin="5"
                             Grid.Row="4"
-                            Grid.Column="1"
+                            Grid.Column="3"
                             Foreground="Gray"
                             >
                     Type
@@ -137,13 +124,13 @@
                             FontSize="16"
                             Margin="5"
                             Grid.Row="4"
-                            Grid.Column="2"                       
+                            Grid.Column="4"                       
                             Text="{Binding Path=Spectrum.CollisionType}"
                             HorizontalAlignment="Stretch"/>
                 <Label
                             FontSize="16"
                             Margin="5"
-                            Grid.Row="5"
+                            Grid.Row="4"
                             Foreground="Gray"
                             Grid.Column="1"
                             >
@@ -151,7 +138,7 @@
                 </Label>
                 <TextBlock 
                             Margin="5"
-                            Grid.Row="5"
+                            Grid.Row="4"
                             Grid.Column="2"
                             FontSize="16"   
                             Text="{Binding Path=Spectrum.ParentFeature.ChargeState }"                                                                     
@@ -160,20 +147,45 @@
                 <Label
                             FontSize="16"
                             Margin="5"
-                            Grid.Row="6"
+                            Grid.Row="1"
                             Foreground="Gray"
-                            Grid.Column="1"
+                            Grid.Column="3"
                             >
                     ID
                 </Label>
                 <TextBlock 
                             Margin="5"
-                            Grid.Row="6"
-                            Grid.Column="2"
+                            Grid.Row="1"
+                            Grid.Column="4"
                             FontSize="16"   
                             Text="{Binding Path=Spectrum.ID }"                                                                     
                             HorizontalAlignment="Stretch"/>
             </Grid>
         </Border>
-    </Grid>
+            <Expander 
+                IsExpanded="True"
+                Header="Plots"
+                Grid.Row="1" 
+                Grid.Column="0" 
+                Grid.ColumnSpan="2">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"/>
+                        <ColumnDefinition Width="50*"/>
+                    </Grid.ColumnDefinitions>
+                    <oxy:Plot 
+                        Grid.Column="0"
+                        Margin="2"
+                        Model="{Binding SelectedSpectrumPlotModel.Model}"
+                        />
+                    <oxy:Plot 
+                        Grid.Column="1"
+                        Margin="2"
+                        Model="{Binding SelectedSpectrumXic.Model}"
+                        />
+                </Grid>
+        </Expander>
+
+        </Grid>
+    </Border>
 </UserControl>
