Removed retention time made it NET for all objects.  Added a TestBase object to the unit tests so that we can reconcile paths better.  Started some overhaul work on the alignment unit tests.

--- a/src/Applications/MultiAlign/Windows/Viewers/Clusters/UMCSummaryView.xaml
+++ b/src/Applications/MultiAlign/Windows/Viewers/Clusters/UMCSummaryView.xaml
@@ -71,7 +71,7 @@
                         Grid.Row="1"
                         Grid.Column="2"
                         HorizontalAlignment="Left"
-                        Margin="5" Text="{Binding Path=Feature.RetentionTime, StringFormat=F3}" />
+                        Margin="5" Text="{Binding Path=Feature.NetAligned, StringFormat=F3}" />
                 <TextBlock
                         Grid.Row="2"
                         Grid.Column="2"
